# Video-Monitoring

./: .gitignore  README.md
Motion-Tracking/: pyproject.toml
Motion-Tracking/motion_tracking/: MotionTracking.py  face_cam_detection.py  face_image_detection.py  face_train.py  main.py  main2.py  motion_tracking_main.py  tempCodeRunnerFile.py  test_postgresql.py
