[tool.poetry]
name = "motion-tracking"
version = "0.1.0"
description = ""
authors = ["Athos Balmant <athos.kyoto@gmail.com>"]
readme = "README.md"
packages = [{include = "motion_tracking"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
