[tool.poetry]
name = "motion-tracking"
version = "0.1.0"
description = ""
authors = ["Athos Balmant <athos.kyoto@gmail.com>"]
readme = "README.md"
packages = [{include = "motion_tracking"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
pyqt6 = "^6.4.2"
opencv-contrib-python = "^4.7.0.72"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
